fixed issue in the nav bar on mobile where the text was covered by the border on click

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,7 @@ body {
   border: 1px solid red;
   border-radius: 20px;
   transition-duration: 0.5s;
+  padding-left: 10px;
 }
 
 .nav-item {
